<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeoDataSource"
    android:paddingVertical="10dp"
    android:paddingHorizontal="15dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/geoTxtViewFindCities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/geoTxtViewFindCities"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/geoEditTxtLat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/geoEditTxtLat"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:paddingVertical="15dp"
        android:textSize="18sp"
        android:text="37.3861" />

    <EditText
        android:id="@+id/geoEditTxtLon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/geoEditTxtLon"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:paddingVertical="15dp"
        android:textSize="18sp"
        android:text="-122.084" />

    <ProgressBar
        android:id="@+id/geoProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal"/>

    <Button
        android:id="@+id/geoBtnSearchCities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:text="@string/geoBtnSearchCities"
        android:textSize="20sp" />

    <Button
        android:id="@+id/geoBtnFavourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:text="@string/geoBtnFavourites"
        android:textSize="20sp" />

</LinearLayout>