<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:text="@string/deezerNavigTitle"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:text="@string/deezerNavAuthor"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:text="@string/versionN"
        android:textSize="14sp" />
</LinearLayout>