<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/infoSMH"
        android:icon="@drawable/about_smh"
        android:orderInCategory="5"
        android:title="Info About the Project"
        app:showAsAction="never" />

    <item
        android:id="@+id/aboutSMH"
        android:icon="@drawable/app_smh"
        android:orderInCategory="1"
        android:title="How to use"
        app:showAsAction="never" />

    <item
        android:id="@+id/geoMenuItem"
        android:icon="@drawable/ic_geo_city"
        android:orderInCategory="100"
        android:title="@string/btnGeoData"
        app:showAsAction="always" />

    <item
        android:id="@+id/lyricsMenuItem"
        android:icon="@drawable/ic_lyric_song"
        android:orderInCategory="300"
        android:title="@string/btnSongLyrics"
        app:showAsAction="always" />

    <item
        android:id="@+id/deezerMenuItem"
        android:icon="@drawable/ic_deezer"
        android:orderInCategory="400"
        android:title="@string/btnDeezerSong"
        app:showAsAction="always" />

</menu>