<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/slsToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <ProgressBar
            android:id="@+id/slsProgressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    <TextView
            android:id="@+id/slsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/slsHeaderText"
            android:textSize="20sp" />


    <EditText
            android:id="@+id/slsSearchInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="@string/slsSearchInputHint"
            android:hint="@string/slsSearchInputHint"
            android:inputType="text" />


    <Button
            android:id="@+id/slsSearchLyricsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/slsSearchBtnText" />

    <Button
            android:id="@+id/slsFavouriteList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/slsFavoriteListBtn" />


</LinearLayout>
