<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_weather_forecast"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/albumImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        />

    <TextView
        android:id="@+id/albumTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:typeface="monospace"
        android:text="@string/albumTitle"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:typeface="monospace"
        android:text="@string/title"/>

    <TextView
        android:id="@+id/songDuration"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:typeface="monospace"
        android:text="@string/songDuration"/>



    <ProgressBar
        android:id="@+id/progressBarActivity2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:visibility="invisible" />

</LinearLayout>