<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragment"
    tools:context=".DeezerFragmentDetails">

    <LinearLayout
        android:id="@+id/activity_deezer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ProgressBar

            android:id="@+id/circularProgressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:indeterminate="false"
            android:max="100"
            android:progress="50"
            android:layout_centerInParent="true"
            android:progressDrawable="@drawable/circular"
            android:secondaryProgress="100"
            />

        <ImageView
            android:id="@+id/albumImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            />

        <TextView
            android:id="@+id/albumTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:typeface="monospace"
            android:text="@string/albumTitle"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:typeface="monospace"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/songDuration"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:typeface="monospace"
            android:text="@string/songDuration"/>

    </LinearLayout>
</FrameLayout>
