<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/botomLine"
            android:layout_alignTop="@+id/botomLine"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/slsToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:actionViewClass="androidx.appcompat.widget.SearchView" />

        <ProgressBar
                android:id="@+id/slsProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/slsGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slsGroupText" />

            <TextView
                    android:id="@+id/slsGroupName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/slsSong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slsSongText" />

            <TextView
                    android:id="@+id/slsSongName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/slsLyrics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="10sp"
                    android:gravity="center"
                    android:text="@string/slsLyricsText" />

            <TextView
                    android:id="@+id/slsLyricsName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="10sp"
                    android:gravity="center"
                    android:scrollbars="vertical" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/botomLine"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"

            android:orientation="horizontal">

        <Button
                android:id="@+id/slsAddToFavoriteListBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"

                android:layout_margin="10dp"
                android:text="@string/slsAddToFavoriteListBtn" />

        <Button
                android:id="@+id/slsSearchGoogleBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/slsSearchGoogleBtn" />
    </LinearLayout>
</RelativeLayout>
